style: layout do episodio para o adapter, adição do recycler na activity do PodcastActivity

--- a/app/src/main/res/layout/podcast_activity.xml
+++ b/app/src/main/res/layout/podcast_activity.xml
@@ -67,6 +67,14 @@
             android:text="Descrição do Podcast"
             android:textAppearance="?android:attr/textAppearanceSmall" />
 
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/episodes_recycler_view"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:clipToPadding="false"
+            android:scrollbars="vertical" />
+
     </LinearLayout>
 
 </FrameLayout>
