--- a/app/src/main/res/layout/podcast_activity.xml
+++ b/app/src/main/res/layout/podcast_activity.xml
@@ -17,7 +17,8 @@
             android:layout_height="120dp"
             android:layout_gravity="center"
             android:scaleType="centerCrop"
-            android:src="@drawable/ic_launcher_background" />
+            android:background="@drawable/image_backgorund"
+            android:src="@drawable/logtype_podwave" />
 
         <TextView
             android:id="@+id/podcast_title_layout"
@@ -25,7 +26,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:gravity="center"
-            android:text="Título do Podcast"
+            android:text="@string/podcast_tittle"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:textStyle="bold" />
 
@@ -35,7 +36,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
             android:gravity="center"
-            android:text="Categoria do Podcast"
+            android:text="@string/podcast_categoria"
             android:textAppearance="?android:attr/textAppearanceSmall"
             android:textStyle="italic" />
 
@@ -45,7 +46,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
             android:gravity="center"
-            android:text="Autor do Podcast"
+            android:text="@string/podcast_autor"
             android:textAppearance="?android:attr/textAppearanceSmall"
             android:textStyle="italic" />
 
@@ -55,7 +56,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
             android:gravity="center"
-            android:text="Número de Episódios: 0"
+            android:text="@string/podcast_episode_size"
             android:textAppearance="?android:attr/textAppearanceSmall"
             android:textStyle="bold" />
 
@@ -64,7 +65,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:text="Descrição do Podcast"
+            android:text="@string/podcast_description"
             android:textAppearance="?android:attr/textAppearanceSmall" />
 
         <androidx.recyclerview.widget.RecyclerView
