--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,14 +21,27 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:text="@string/text_tittle"
+            android:textSize="12dp"
             android:textAppearance="?android:attr/textAppearanceButton" />
 
         <TextView
+            android:id="@+id/slogan_text_layout"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginVertical="15dp"
-            android:text="@string/text_description"
+            android:textSize="12dp"
+            android:text=""
+            android:textAppearance="?android:attr/textAppearanceLarge" />
+
+        <TextView
+            android:id="@+id/init_text_layout"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="start"
+            android:layout_marginVertical="15dp"
+            android:textSize="14dp"
+            android:text=""
             android:textAppearance="?android:attr/textAppearanceLarge" />
 
         <LinearLayout
@@ -55,7 +68,7 @@
             </com.google.android.material.textfield.TextInputLayout>
 
             <TextView
-                android:id="@+id/verify_url"
+                android:id="@+id/verify_url_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text=""
@@ -79,10 +92,21 @@
             android:fillViewport="true">
 
             <LinearLayout
+                android:id="@+id/linear_history_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/last_acess_layout"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="start"
+                    android:layout_marginTop="6dp"
+                    android:textSize="12dp"
+                    android:text="@string/text_history"
+                    android:textAppearance="?android:attr/textAppearanceMedium" />
 
                 <ListView
                     android:id="@+id/urlsListHistory_layout"
@@ -92,21 +116,21 @@
                     android:dividerHeight="1dp"
                     android:visibility="visible" />
 
-                <TextView
+                <com.google.android.material.button.MaterialButton
                     android:id="@+id/clearHistory_layout"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="end"
-                    android:layout_marginTop="8dp"
+                    android:layout_gravity="center"
+                    android:textSize="8dp"
                     android:text="@string/clear_history"
-                    android:textAppearance="?android:attr/textAppearanceMedium" />
+                    app:cornerRadius="55dp" />
 
             </LinearLayout>
         </ScrollView>
     </LinearLayout>
 
     <com.airbnb.lottie.LottieAnimationView
-        android:id="@+id/loader"
+        android:id="@+id/loader_layout"
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:layout_centerHorizontal="true"
