--- a/app/src/main/res/layout/item_episode.xml
+++ b/app/src/main/res/layout/item_episode.xml
@@ -7,7 +7,7 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:background="@color/black" />
+        android:background="@color/grey" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -71,8 +71,8 @@
 
         <ImageButton
             android:id="@+id/play_layout"
-            android:layout_width="28dp"
-            android:layout_height="28dp"
+            android:layout_width="18dp"
+            android:layout_height="18dp"
             android:layout_marginEnd="16dp"
             android:background="@drawable/play_button"
             app:layout_constraintBottom_toBottomOf="parent"
