--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,7 +6,9 @@
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
+    <color name="black_text">#FF000000</color>
     <color name="grey">#BFBFBF</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="white_text">#FFFFFFFF</color>
     <color name="red">#b20d16</color>
 </resources>
