--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,7 +32,7 @@
             android:layout_marginVertical="15dp"
             android:textSize="12dp"
             android:text=""
-            android:textAppearance="?android:attr/textAppearanceLarge" />
+            android:textAppearance="?android:attr/textAppearanceMedium" />
 
         <TextView
             android:id="@+id/init_text_layout"
@@ -42,7 +42,7 @@
             android:layout_marginVertical="15dp"
             android:textSize="14dp"
             android:text=""
-            android:textAppearance="?android:attr/textAppearanceLarge" />
+            android:textAppearance="?android:attr/textAppearanceMedium" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -57,6 +57,7 @@
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/urlEditText_layout"
+                    style="Theme.PodWave"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:backgroundTint="@color/white"
